[tool.poetry]
name = "cardex"
version = "0.1.0"
description = ""
authors = ["Elder Millenial <eldermillenial@protonmail.com>"]
readme = "README.md"
packages = [{include = "cardex", from = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.31.0"
pydantic = "^2.5.2"
psycopg = {extras = ["binary", "pool"], version = "^3.1.13"}
python-dotenv = "0.21.1"
pycardano = "0.10.0"


[tool.poetry.group.dev.dependencies]
black = "^23.11.0"
ruff = "^0.1.6"
pre-commit = "^3.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
